2000-11-16  Mathieu Lacage  <mathieu@eazel.com>

	fix bug 4769
	* mime-type-capplet/nautilus-mime-type-capplet-dialogs.c:
	(nautilus_mime_type_capplet_show_new_mime_window): tweak to
	look slightly better. fix a potential segfault too.
	* mime-type-capplet/nautilus-mime-type-capplet.c: (revert_real_cb),
	(revert_mime_clicked), (add_mime_clicked): add dialog hook.

2000-11-16  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 4528, http method does not listen for
	'use-http-proxy' preference.
	
	* modules/http-method.c: 
	(vfs_module_init):
	Listen to changes in 'use-http-proxy' settings.
	
	(sig_gconf_value_changed),
	Check for status of 'use-http-proxy' system setting before
	setting proxy to new modified value. This allows a user to edit
	the text of the proxy without actually resetting the proxy to
	this value if the "Use Proxy" checkbox is unset.	

2000-11-16  Mathieu Lacage  <mathieu@eazel.com>

	Fix bugs 2767 and 3228
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(nautilus_stop_in_debugger),
	(nautilus_stop_after_default_log_handler),
	(nautilus_set_stop_after_default_log_handler),
	(nautilus_make_warnings_and_criticals_stop_in_debugger), 
	add debugging functions. They are disabled by default.
	(main), add call to debuggin funcitons if they are enabled.
	(change_icon_clicked), implement.
	(init_mime_capplet), tweaks, cleanups
	(nautilus_mime_type_capplet_update_info), update icon.
	(revert_mime_clicked), implement correctly.
	(delete_mime_clicked), implement correctly.
	(add_mime_clicked), cleanups
	(capplet_get_icon_pixbuf), new function to get the pixbuf for 
	a given mime type
	(populate_mime_list): use the new function above, refactor.
	(update_mime_list_action): idem.

2000-11-15  Mathieu Lacage  <mathieu@eazel.com>

	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(init_mime_capplet), make it look like what Arlo wanted.
	(revert_mime_clicked): new callback to reset user settings.

2000-11-15  Pavel Cisler  <pavel@eazel.com>
